# smallfolk_cpp

./: CMakeLists.txt  smallfolk.cpp  smallfolk.h
